# EITPose

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  test.py  test_hello.py
src/analysis/evaluation/: experiment.py  experiment_cls_cross_user.py  experiment_cls_within_session.py  experiment_mpjpe_cross_session.py  experiment_mpjpe_cross_user.py  experiment_mpjpe_longitudinal.py  experiment_mpjpe_within_session.py  experiments_runner.py
src/analysis/models/: ETR.py
src/analysis/preprocessing/: data_loader.py  data_splitter_v2.py  evaluation_helper.py  helper_functions.py
src/recorder/: bind.py  eit_kit.py  google_media_pipe.py
src/visualizer/: DataComparator.py  DataComparatorVisualizer.py
